# Airawat

./: .gitignore  .gitmodules  README.md  robot.urdf
airawat_ws/: frames_2025-12-28_18.36.49.gv
airawat_ws/src/arm_controller/: CMakeLists.txt  package.xml
airawat_ws/src/arm_controller/config/: config.yaml
airawat_ws/src/arm_controller/include/arm_controller/: arm_controller.hpp  smooth_trajectory.hpp
airawat_ws/src/arm_controller/src/: arm_controller.cpp  smooth_trajectory.cpp
airawat_ws/src/arm_controller/srv/: EmergencyStop.srv  GetCurrentAngle.srv  SetArmState.srv  SetJointAngle.srv  StopAndGoToIdeal.srv
airawat_ws/src/bno055/: package.xml  setup.py
airawat_ws/src/bno055/bno055/: imu_publisher.py
airawat_ws/src/hardware_interfaces/: package.xml  setup.py
airawat_ws/src/hardware_interfaces/config/: drive_config.yaml  rc_config.yaml  servo_config.yaml
airawat_ws/src/hardware_interfaces/hardware_interfaces/: drive_interface.py  imu_interface.py  rc_interface.py  servo_interface.py
airawat_ws/src/hardware_interfaces/launch/: imu_interface.launch.py  lidar_interface.launch.py
airawat_ws/src/hardware_interfaces/params/: drive_params.yaml  servo_params.yaml
airawat_ws/src/manual_controller/: package.xml  setup.py
airawat_ws/src/manual_controller/config/: drive_controller_config.yaml  servo_controller_config.yaml
airawat_ws/src/manual_controller/manual_controller/: servo_controller.py
airawat_ws/src/navigation/: CMakeLists.txt  package.xml
airawat_ws/src/navigation/launch/: nav2.launch.py  nav2test.launch.py  nav2test2.launch.py  test.launch.py
airawat_ws/src/navigation/params/: nav2_params.yaml  test.yaml
airawat_ws/src/robot_descriptior/: package.xml  setup.cfg  setup.py
airawat_ws/src/robot_descriptior/launch/: robot_state_publisher.launch.py
airawat_ws/src/robot_descriptior/urdf/: robot.urdf
airawat_ws/src/slam/: package.xml  setup.py
airawat_ws/src/slam/config/: config.lua
airawat_ws/src/slam/launch/: cartographer.launch.py
airawat_ws/src/slam_bringup/: CMakeLists.txt  package.xml
airawat_ws/src/slam_bringup/config/: config.lua
airawat_ws/src/slam_bringup/launch/: cartographer.launch.py
